--- a/gradle.properties
+++ b/gradle.properties
@@ -8,5 +8,5 @@ forge_version=1.15.2-31.1.27
 mapping_version=20200323-1.15.1
 ftb_gui_library_version=1.+
 ftb_teams_version=1.+
+ftb_ranks_version=1.+
 kubejs_version=2.+
-jei_file=2855456
