Fixed max force loaded chunks using max claimed chunks default value when FTB Ranks are installed

--- a/build.gradle
+++ b/build.gradle
@@ -81,7 +81,7 @@ configurations.all {
 repositories {
 	mavenLocal()
 	maven { url "https://maven.tterrag.com/" } //Yarn2MCP
-	maven { url "https://maven.latmod.com/" } //FTB GUI Library, FTB Teams, KubeJS
+	maven { url "https://maven.latmod.com/" } //FTB GUI Library, FTB Teams, FTB Ranks, KubeJS
 }
 
 dependencies {
