Implemented map sharing, fixed license being in wrong place for 1.16.2 (but it most likely won't work anyway)

--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -1,6 +1,7 @@
 modLoader="javafml"
 loaderVersion="[28,)"
 issueTrackerURL="https://github.com/FTBTeam/FTB-Chunks/issues"
+license="All Rights Reserved"
 
 [[mods]]
 modId="ftbchunks"
