Bugfixes, Added BOP integration (block colors), claim dimension blacklist, claimed chunk rendering directly on map

--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ dependencies {
 	//	transitive = false
 	//	changing = true
 	//}))
+	runtimeOnly fg.deobf(curse.resolve('biomes-o-plenty', project.bop_file))
 }
 
 jar {
