--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ mod_version=1.1.1
 mod_author=LatvianModder
 forge_version=1.16.2-33.0.7
 mapping_version=20200723-1.16.1
+curseforge_id=314906
 ftb_gui_library_version=1.+
 ftb_teams_version=1.+
 ftb_ranks_version=1.+
