--- a/gradle.properties
+++ b/gradle.properties
@@ -5,11 +5,11 @@ mod_package=com.feed_the_beast.mods
 mod_version=1603.1.2
 mod_author=LatvianModder
 forge_version=1.16.3-34.1.10
-mapping_version=20200916-1.16.2
+mapping_version=20201028-1.16.3
 curseforge_id=314906
 ftb_gui_library_version=1603.+
 ftb_teams_version=1.+
 ftb_ranks_version=1.+
 kubejs_version=1603.+
-yamda_version=5.+
-bop_file=3025749
+bop_file=3098743
+byg_file=3098350
