Updated forge, switched to mojmaps

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ archivesBaseName = project.mod_name
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8'
 
 minecraft {
-	mappings channel: 'snapshot', version: project.mapping_version
+	mappings channel: 'official', version: project.mapping_version
 	// accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
 	runs {
 		client {
