--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,8 @@ mod_name=ftb-chunks
 mod_package=com.feed_the_beast.mods
 mod_version=1604.2.2
 mod_author=LatvianModder
-forge_version=1.16.3-34.1.10
-mapping_version=20201028-1.16.3
+forge_version=1.16.4-35.1.36
+mapping_version=1.16.4
 curseforge_id=314906
 ftb_gui_library_version=1603.+
 ftb_teams_version=1.+
