--- a/build.gradle
+++ b/build.gradle
@@ -148,6 +148,7 @@ if (ENV.CURSEFORGE_KEY) {
 			addGameVersion "1.16.2"
 			addGameVersion "1.16.3"
 			addGameVersion "1.16.4"
+			addGameVersion "1.16.5"
 			relations {
 				requiredDependency 'ftb-gui-library'
 				optionalDependency 'ftb-ranks'
