--- a/gradle.properties
+++ b/gradle.properties
@@ -1,15 +1,18 @@
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx1G
+loom.forge=true
+minecraft_version=1.16.5
+forge_version=36.0.42
+mod_version=1605.2.3
+maven_group=com.feed_the_beast.mods
+archives_base_name=ftb-chunks
 mod_id=ftbchunks
-mod_name=ftb-chunks
-mod_package=com.feed_the_beast.mods
-mod_version=1604.2.2
 mod_author=LatvianModder
-forge_version=1.16.4-35.1.36
-mapping_version=1.16.4
 curseforge_id=314906
-ftb_gui_library_version=1603.+
-ftb_teams_version=1.+
-ftb_ranks_version=1604.+
-kubejs_version=1603.+
+arch_file=3222770
+rhino_file=3187177
+kubejs_file=3222777
 bop_file=3098743
 byg_file=3098350
+ftbguilibrary_file=3214262
+ftbteams_file=3182798
+ftbranks_file=3200263
