--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
 	id 'forgified-fabric-loom' version '0.6.70'
+	id "com.matthewprenger.cursegradle" version "1.4.0" apply false
 	id 'maven-publish'
 }
 
