Update .gitlab-ci.yml, gradle.properties, build.gradle files

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@ loom.forge=true
 minecraft_version=1.16.5
 forge_version=36.0.42
 mod_version=1605.2.3
-maven_group=com.feed_the_beast.mods
+maven_group=dev.ftb.mods
 archives_base_name=ftb-chunks
 mod_id=ftbchunks
 mod_author=LatvianModder
