--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ build_release:
   stage: build
   script:
     - chmod +x gradlew
-    - ./gradlew clean publish
+    - ./gradlew clean build publish
   artifacts:
     paths:
       - build/libs/*.jar
@@ -20,7 +20,7 @@ build_dev:
   stage: build
   script:
     - chmod +x gradlew
-    - ./gradlew clean publish
+    - ./gradlew clean build publish
   artifacts:
     paths:
       - builds/libs/*.jar
@@ -33,10 +33,9 @@ curseforge_release:
   script:
     - chmod +x gradlew
     - ./gradlew curseforgePublish
-  artifacts:
-    paths:
-      - build/libs/*.jar
   rules:
     - if: '$CI_COMMIT_TAG'
     - if: '$CI_COMMIT_TAG && $CI_PROJECT_ID == "151"'
-
+  needs:
+    - job: build_release
+      artifacts: true
