--- a/build.gradle
+++ b/build.gradle
@@ -92,6 +92,7 @@ jar {
 publishing {
 	publications {
         library(MavenPublication) {
+			artifactId = project.archives_base_name
             artifact(remapJar) {
                 builtBy remapJar
             }
