--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,8 +15,9 @@ cache:
 build_release:
   stage: build
   script:
+    - rm -rf build/libs
     - chmod +x gradlew
-    - ./gradlew clean build publish
+    - ./gradlew build publish
   artifacts:
     paths:
       - build/libs/*.jar
@@ -27,8 +28,9 @@ build_release:
 build_dev:
   stage: build
   script:
+    - rm -rf build/libs
     - chmod +x gradlew
-    - ./gradlew clean build publish
+    - ./gradlew build publish
   artifacts:
     paths:
       - build/libs/*.jar
@@ -40,7 +42,7 @@ curseforge_release:
   stage: release
   script:
     - chmod +x gradlew
-    - ./gradlew curseforgePublish
+    - ./gradlew curseforge
   rules:
     - if: '$CI_COMMIT_TAG'
     - if: '$CI_COMMIT_TAG && $CI_PROJECT_ID == "151"'
