--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ cache:
   paths:
      - .gradle/wrapper
      - .gradle/caches
+     - build
 
 # Build and publish public releases to maven
 build_release:
@@ -41,8 +42,9 @@ build_dev:
 curseforge_release:
   stage: release
   script:
+    - ls build/libs
     - chmod +x gradlew
-    - ./gradlew curseforge
+    - ./gradlew build curseforge
   rules:
     - if: '$CI_COMMIT_TAG'
     - if: '$CI_COMMIT_TAG && $CI_PROJECT_ID == "151"'
