--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build_release:
     paths:
       - build/libs/*.jar
   rules:
-    - if: '$CI_COMMIT_TAG && $CI_PROJECT_ID == "151"'
+    - if: '$CI_COMMIT_TAG && $CI_PROJECT_ROOT_NAMESPACE == "ftb-public"'
 
 # Build development versions
 build_dev:
@@ -36,18 +36,17 @@ build_dev:
     paths:
       - build/libs/*.jar
   rules:
-    - if: '$CI_PROJECT_ID == "138"'
+    - if: '$CI_PROJECT_ROOT_NAMESPACE != "ftb-public"'
 
 # If we're on the public facing repo and there's a commit tag, publish to CurseForge
 curseforge_release:
   stage: release
   script:
-    - ls build/libs
     - chmod +x gradlew
-    - ./gradlew build curseforge
+    - ./gradlew curseforge
   rules:
     - if: '$CI_COMMIT_TAG'
-    - if: '$CI_COMMIT_TAG && $CI_PROJECT_ID == "151"'
+    - if: '$CI_COMMIT_TAG && $CI_PROJECT_ROOT_NAMESPACE == "ftb-public"'
   needs:
     - job: build_release
       artifacts: true
