--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,6 @@ rhino_file=3187177
 kubejs_file=3222777
 bop_file=3098743
 byg_file=3098350
-ftbguilibrary_file=3214262
-ftbteams_file=3182798
+ftb_gui_library_version=1605.3.0-build.51
+ftb_teams_version=1605.2.0-build.28
 ftbranks_file=3200263
