--- a/gradle.properties
+++ b/gradle.properties
@@ -15,4 +15,4 @@ bop_file=3098743
 byg_file=3098350
 ftb_gui_library_version=1605.3.0-build.51
 ftb_teams_version=1605.2.0-build.28
-ftbranks_file=3200263
+ftb_ranks_version=1605.1.2-build.14
