Woo things work now

--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -80,6 +80,9 @@ if (ENV.CURSEFORGE_KEY) {
             relations {
                 requiredDependency 'architectury-fabric'
                 requiredDependency 'fabric-api'
+                requiredDependency 'ftb-gui-library-fabric'
+                requiredDependency 'ftb-teams-fabric'
+                optionalDependency 'ftb-ranks-fabric'
             }
             changelog = getGitChangelog
             changelogType = 'markdown'
