--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -85,6 +85,9 @@ if (ENV.CURSEFORGE_KEY) {
             mainArtifact(remapJar.archivePath)
             relations {
                 requiredDependency 'architectury-forge'
+                requiredDependency 'ftb-gui-library'
+                requiredDependency 'ftb-teams'
+                optionalDependency 'ftb-ranks'
             }
             changelog = getGitChangelog
             changelogType = 'markdown'
