--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,17 @@ org.gradle.daemon=false
 mod_id=ftbchunks
 mod_name=ftb-chunks
 mod_package=dev.ftb.mods
-mod_version=1605.2.5
+mod_version=1605.3.0
 mod_author=LatvianModder
 minecraft_version=1.16.5
 forge_version=36.0.42
 curseforge_id_forge=314906
-curseforge_id_fabric=0
-architectury_version=1.9.132
+curseforge_id_fabric=472657
+architectury_version=1.11.144
 fabric_loader_version=0.11.1
 fabric_api_version=0.30.0+1.16
 rhino_file=3187177
 kubejs_file=3222777
-ftb_gui_library_version=1605.3.0-build.51
-ftb_teams_version=1605.2.0-build.28
-ftb_ranks_version=1605.1.2-build.14
+ftb_gui_library_version=1605.3.0-build.53
+ftb_teams_version=1605.2.0-build.32
+ftb_ranks_version=1605.1.2-build.15
