Added partial configs, canvas integration

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,13 @@ allprojects {
                 includeGroup "dev.ftb.mods"
             }
         }
+
+        maven {
+            url "https://maven.dblsaiko.net/"
+            content {
+                includeGroup "grondag"
+            }
+        }
     }
 }
 
