--- a/gradle.properties
+++ b/gradle.properties
@@ -12,8 +12,9 @@ curseforge_id_fabric=472657
 architectury_version=1.11.144
 fabric_loader_version=0.11.1
 fabric_api_version=0.30.0+1.16
-rhino_file=3187177
-kubejs_file=3222777
+rhino_version=1.7.13-build.22
+kubejs_version=1605.3.7-build.180
 ftb_gui_library_version=1605.3.0-build.53
 ftb_teams_version=1605.2.0-build.32
 ftb_ranks_version=1605.1.2-build.15
+cloth_config_version=4.11.+
