--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,7 +1,7 @@
 dependencies {
     modImplementation "net.fabricmc:fabric-loader:${rootProject.fabric_loader_version}"
     modApi "me.shedaniel:architectury:${rootProject.architectury_version}"
-    modImplementation "dev.ftb.mods:ftb-gui-library-fabric:${rootProject.ftb_gui_library_version}"
+    modImplementation "dev.ftb.mods:ftb-library-fabric:${rootProject.ftb_library_version}"
     modImplementation "dev.ftb.mods:ftb-teams-fabric:${rootProject.ftb_teams_version}"
     modImplementation "dev.ftb.mods:ftb-ranks-fabric:${rootProject.ftb_ranks_version}"
     modImplementation "dev.latvian.mods:rhino:${rootProject.rhino_version}"
